# qqq

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  packaging.yml
src/imppkg/: _version.py  harmonic_mean.c
src/pubpypack_harmony_joe_rodrigue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/qqq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: test_harmonic_mean.py
