[build-system]                                                                                                                               
requires = ['cython', 'setuptools', 'wheel']                                                                                                           
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
