[build-system]                                                                                                                               
requires = ['cython', 'setuptools', 'wheel']                                                                                                           
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.bumpver]
current_version = "v2023.09.03-1"
version_pattern = "vYYYY.0M.0D[-PATCH]"
commit_message  = "bump version {old_version} => {new_version}"
tag             = true
push            = false
commit          = true

[tool.bumpver.file_patterns]
"README.md" = [
  'Version {version}',
]
"setup.cfg" = [
  'version = "v2023.04.26-2"',
]
"src/imppkg/_version.py" = [
  '__version__ = "{version}"',
]
