[build-system]                                                                                                                               
requires = ['cython', 'setuptools', 'wheel']                                                                                                           
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.bumpver]
current_version = "2023.09.4"
version_pattern = "YYYY.0M.INC0"
commit_message  = "bump version {old_version} => {new_version}"
tag             = true
push            = false
commit          = true

[tool.bumpver.file_patterns]
"README.md" = [
  'Version {version}',
]
"setup.cfg" = [
  'version = "{version}"',
]
"src/imppkg/_version.py" = [
  '__version__ = "{version}"',
]
