[metadata]
name = pubpypack-harmony-joe-rodrigue
version = "v2023.09.03-3"
url = https://github.com/JoeRodrigue/qqq
author = Joe Rodrigue
author_email = "Joe Rodrigue" <joe.rodrigue@gmail.com>
description = This package does good things
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
classifiers =
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
package_dir =
	= src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
	termcolor >= 1.1.0, < 2.0
	click >= 8.0.0

[options.packages.find]
where = src
exclude =
	test_*

[options.entry_points]
console_scripts =
	hmean = imppkg.hmean:read_cl_arguments
	vmean = imppkg.harmony:main

[tool:pytest]
testpaths =
	test/
addopts =
	--cov
	--strict-markers
xfail_strict = True

[coverage:paths]
source =
	src/imppkg/
	*/site-packages/imppkg/

[coverage:report]
show_missing = True
skip_covered = True

[coverage:run]
branch = True
source = imppkg

[tox:tox]
isolated_build = True
envlist = py310,py311

[testenv]
deps =
  pytest
	pytest-cov
	pytest-randomly
commands =
	pytest {posargs}

[testenv:get_my_ip]
deps =
	requests
commands =
	python -c "import requests; print(requests.get('https://ipv4.icanhazip.com').text)"
skip_install = True

[testenv:typecheck]
deps =
	mypy
	pytest
	types-termcolor
commands =
	mypy --ignore-missing-imports {posargs: src test}

[mypy]
python_version >= 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[testenv:format]
deps =
	black
commands =
	black {posargs: --check --diff src test}
skip_install = True

[testenv:lint]
deps =
  flake8
	flake8-bugbear
commands =
  flake8 {posargs: src test}

[flake8]
max-line-length = 120
